# fhir-apis

./: .pre-commit-config.yaml  LICENSE  README.md
javascript/: README.md
javascript/plain_node_js/: package-lock.json  package.json
javascript/plain_node_js/src/: server.js
javascript/plain_node_js/src/middlewares/: jsonMiddleware.js
javascript/plain_node_js/src/routes/: errorHandler.js  patientRoutes.js
javascript/plain_node_js/src/utils/: logger.js
planned/java/: README.md
python/: .gitignore  README.md  idea.txt
python/django-rest-framework/: .gitignore  pyproject.toml  pytest.ini
python/django-rest-framework/.ipython/profile_default/: history.sqlite  ipython_config.py
python/django-rest-framework/api/: admin.py  serializers.py  urls.py  views.py
python/django-rest-framework/api/migrations/: 0001_initial.py  0001_squashed_0003_alter_address_begin_effective_datetime_and_more.py
python/django-rest-framework/api/models/: common.py  practitioner.py
python/django-rest-framework/api/tests/: test_practitioner.py
python/django-rest-framework/api/tests/factories/: practitioner.py
python/django-rest-framework/fhir/: asgi.py  settings.py  urls.py  wsgi.py
python/fastapi-fhir/: README.md  main.py  pyproject.toml  test_patient_endpoints.py
python/fastapi-fhir/database_app/: crud.py  database.py  models.py  schemas.py
