[tool.poetry]
name = "django-rest-framework"
version = "0.1.0"
description = ""
authors = ["Joshua Myers <joshua.a.myers@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.1"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
