[tool.poetry]
name = "fastapi_fhir"
version = "0.1.0"
description = ""
authors = ["Joshua Myers <joshua.a.myers@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.109.0"}
uvicorn = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
